==> cradle08/nb_wvds/platform/f5310/leds-arch.c <==
/*
 * Copyright (c) 2005, Swedish Institute of Computer Science.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 * 1. Redistributions of source code must retain the above copyright
 *    notice, this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 * 3. Neither the name of the Institute nor the names of its contributors
 *    may be used to endorse or promote products derived from this software
 *    without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE INSTITUTE AND CONTRIBUTORS ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE INSTITUTE OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
 * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
 * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 *
 * This file is part of the Configurable Sensor Network Application
 * Architecture for sensor nodes running the Contiki operating system.
 *
 * $Id: leds-arch.c,v 1.1 2006/06/17 22:41:21 adamdunkels Exp $
 *
 * -----------------------------------------------------------------
 *
 * Author  : Adam Dunkels, Joakim Eriksson, Niclas Finne
 * Created : 2005-11-03
 * Updated : $Date: 2006/06/17 22:41:21 $
 *           $Revision: 1.1 $
 */

#include "contiki-conf.h"
#include "dev/leds.h"

/* LED ports */
#if BOARD_CADRE1120_AP
#define LEDS_CONF_RED    0x08
#define LEDS_CONF_GREEN  0x02
#define LEDS_CONF_YELLOW 0x04
#define LEDS_CONF_ORANGE 0x01
#elif BOARD_CADRE1120_VD
#define LEDS_CONF_RED    0x01
#define LEDS_CONF_GREEN  0x01
#define LEDS_CONF_YELLOW 0x01
#else
#define LEDS_CONF_RED    0x01
#define LEDS_CONF_GREEN  0x02
#define LEDS_CONF_YELLOW 0x02
#endif
/*---------------------------------------------------------------------------*/
void
leds_arch_init(void)
{
#if BOARD_CADRE1120_AP
  P4DIR |= LEDS_CONF_RED;
  P4DIR |= LEDS_CONF_GREEN;
  P4DIR |= LEDS_CONF_YELLOW;
  P4DIR |= LEDS_CONF_ORANGE;
  P4OUT |= LEDS_CONF_RED;
  P4OUT |= LEDS_CONF_GREEN;
  P4OUT |= LEDS_CONF_YELLOW;
  P4OUT |= LEDS_CONF_ORANGE;
#elif BOARD_CADRE1120_VD
  P2DIR |= LEDS_CONF_GREEN;
  P2OUT |= LEDS_CONF_GREEN;
#else
  /* only red and green for now */
  P1DIR |= LEDS_CONF_RED;
  P1DIR |= LEDS_CONF_GREEN;
#endif
}
/*---------------------------------------------------------------------------*/
unsigned char
leds_arch_get(void)
{
#if BOARD_CADRE1120_AP
  uint8_t out = P4OUT;
  return ((out & LEDS_CONF_RED == 0) ? LEDS_RED : 0)
    | ((out & LEDS_CONF_GREEN == 0) ? LEDS_GREEN : 0)
    | ((out & LEDS_CONF_YELLOW == 0) ? LEDS_YELLOW : 0)
    | ((out & LEDS_CONF_ORANGE == 0) ? LEDS_ORANGE : 0);
#elif BOARD_CADRE1120_VD
  uint8_t out = P2OUT;
  return ((out & LEDS_CONF_GREEN) ? LEDS_GREEN : 0);
#else
  uint8_t out = P1OUT;
  return ((out & LEDS_CONF_RED) ? 0 : LEDS_RED)
    | ((out & LEDS_CONF_GREEN) ? 0 : LEDS_GREEN);
#endif
}
/*---------------------------------------------------------------------------*/
void
leds_arch_set(unsigned char leds)
{
#if BOARD_CADRE1120_AP
  P4OUT = (P4OUT & ~LEDS_CONF_RED) | ((leds & LEDS_RED) ? 0 : LEDS_CONF_RED);
  P4OUT = (P4OUT & ~LEDS_CONF_GREEN) | ((leds & LEDS_GREEN) ? 0 : LEDS_CONF_GREEN);
  P4OUT = (P4OUT & ~LEDS_CONF_YELLOW) | ((leds & LEDS_YELLOW) ? 0 : LEDS_CONF_YELLOW);
  P4OUT = (P4OUT & ~LEDS_CONF_ORANGE) | ((leds & LEDS_ORANGE) ? 0 : LEDS_CONF_ORANGE);
#elif BOARD_CADRE1120_VD
  P2OUT = (P2OUT & ~LEDS_CONF_GREEN) | ((leds & LEDS_GREEN) ? 0 : LEDS_CONF_GREEN);
#else
  P1OUT = (P1OUT & ~LEDS_CONF_RED) | ((leds & LEDS_RED) ? LEDS_CONF_RED : 0);
  P1OUT = (P1OUT & ~LEDS_CONF_GREEN) |
    ((leds & LEDS_GREEN) ? LEDS_CONF_GREEN : 0);
#endif
}
/*---------------------------------------------------------------------------*/
